Apply copilot review feedback: locale fix, zero-param idempotency, access-flag consistency, module opens, multi-source AST test, README VS Code section
Agent-Logs-Url: https://github.com/projectrawit/rawit/sessions/8d85a9db-5356-4b83-88db-ce4ebe591e11

Co-authored-by: ronnygunawan <3048897+ronnygunawan@users.noreply.github.com>